[gd_scene load_steps=3 format=3 uid="uid://ck1atpqpqrt4d"]

[ext_resource type="Script" uid="uid://b05o1axh6xlc0" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Theme" id="Theme_l6cm7"]
Button/font_sizes/font_size = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l6cm7")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 300
text = "Knight Stomp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_l6cm7")

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "PLAY"

[node name="Credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "CREDITS"

[node name="Quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "A game made by Nicolas Asseo using free of use assets"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1000
layout_mode = 0
offset_right = 1907.0
offset_bottom = 1082.0
mouse_filter = 2
color = Color(0.924903, 0.557867, 0.321353, 1)

[connection signal="pressed" from="CenterContainer/MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/Back" to="." method="_on_back_pressed"]
